Added paypal api fully working

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="container">
     <h1 class="text-center mt-5">Paypal Payment Integration</h1>
-    <form method="post" action="/payment/create" class="mt-5 card p-3">
+    <form method="post" action="/paypal/payment/create" class="mt-5 card p-3">
         <div class="mb-3">
             <label for="method" class="form-label">Payment method</label>
             <input id="method" type="text" class="form-control"
